# kpm

./: .gitignore  1024x1024-34_L-xyopen.txt  1024x1024-34_L-xyperiodic.txt  CMakeLists.txt  Constants.h  Makefile  data.txt  dos.ipynb  file.sh  hamiltonian.cpp  hamiltonian.h  kpm.cpp  kpm.h  main.cpp  random.h  simulation.cpp  simulation.h
data/: dos-256x256-21_L-yopen.txt  ldos-0.130000-256x256-21_L-yopen.txt  ldos-0.162500-256x256-21_L-yopen.txt  ldos-0.200000-256x256-21_L-yopen.txt  ldos-0.250000-256x256-21_L-yopen.txt
src/: Constants.h  hamiltonian.cpp  kpm.cpp  kpm.h  main.cpp  simulation.cpp  simulation.h
